--- a/CSS Crash Course/csscheatsheet/style/style.css
+++ b/CSS Crash Course/csscheatsheet/style/style.css
@@ -36,7 +36,7 @@ body{
     font-weight: normal;
 
     /*same as above
-    font: normal Arial, Helvetica, san-serif;
+    font: normal 16px  Arial, Helvetica, san-serif;
 */
     line-height: 1.6em;
     margin:0;
@@ -51,9 +51,11 @@ body{
 .box-1{
     background-color:#333;
     border: 5px red solid;
-   
+    border-width: 3px;
+    border-bottom-width: 10px; 
+    border-top-style:dotted;
     padding: 20px;
-    margin: 20px 0
+    margin: 20px 0;
 }
 
 .box-1 h1{
@@ -70,7 +72,7 @@ body{
  .box-2{
      border: 3px dotted #ccc; 
      padding:20px; 
-     margin: 20px;
+     margin: 20px 0px;
  }
 
  .categories{
