--- a/Acme HTML Responsive/css/style.css
+++ b/Acme HTML Responsive/css/style.css
@@ -153,6 +153,12 @@ aside#sidebar{
     float:right; 
     width:30%; 
     margin-top:10px; 
+}
+
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+    width:90%; 
+    padding:5px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -169,6 +175,16 @@ footer{
     color:#ffffff; 
     background-color: #e8491d;
     text-align: center;
+}
+
+/* Services */ 
+
+ul#services li{
+    list-style: none; 
+    padding:20px; 
+    border: #cccccc solid 1px; 
+    margin-bottom:5px;
+    background: #e6e6e6; 
 }
 
 
