--- a/Acme HTML Responsive/css/style.css
+++ b/Acme HTML Responsive/css/style.css
@@ -187,6 +187,49 @@ ul#services li{
     background: #e6e6e6; 
 }
 
+/*media query make certain conditions for using certain styling depending on the width*/
+
+/*Media queries*/
+
+/*for tablet*/
+@media(max-width:768px){
+
+    /*to get rid of float*/
+    header #branding, 
+    header nav, 
+    header nav li, 
+    #newsletter h1, 
+    #newsletter form, 
+    #boxes .box, 
+    article#main-col, 
+    aside#sidebar
+    {
+        float:none; 
+        text-align:center; 
+        width:100%;
+    }
+
+    header{
+        padding-bottom: 28px;
+    }
+
+    #showcase h1{
+        margin-top: 40px; 
+    }
+
+    #newsletter button, .quote button{
+        display:block; 
+        width:100%; 
+    }
+
+    #newsletter form input[type="email"], .quote input, .quote textarea{
+        width:100%; 
+        margin-bottom:5px; 
+
+    }
+ 
+}
+
 
 
 
