--- a/Flex box Acme/css/style.css
+++ b/Flex box Acme/css/style.css
@@ -12,9 +12,11 @@ body{
 
 /*Global*/
 .container{
-    width:88%; 
-    margin: auto; 
-    overflow:hidden; 
+    display:flex;
+    width:88%;
+    margin: auto;
+    overflow:hidden;
+    justify-content: space-between;
 }
 
 ul{
@@ -49,6 +51,7 @@ header{
     padding-top:30px; 
     min-height:70px; 
     border-bottom:#e8491d 3px solid;
+    justify-content: space-between;
 }
 
 header a{
@@ -61,13 +64,14 @@ header a{
 
 
 header li{
-    float: left; 
     display:inline;
     padding: 0 20px 0 20px; 
+   
 }
 
 header #branding{
-    float: left;
+    /* order: 1; 
+    flex: 2; */
 
 }
 
@@ -76,8 +80,9 @@ header #branding h1{
 }
 
 header nav{
-    float:right;
     margin-top: 10px;
+    /* order: 2;
+    /* flex: 1;  */ 
 }
 
 header .highlight, header .current a{
@@ -95,35 +100,45 @@ header a:hover{
 #showcase{
     min-height: 400px;
     background:url('../images/showcase1.jpg') no-repeat 0 -400px;
-    text-align: center; 
-    color: white; 
+    text-align: center;
+    color: white;
+    flex-direction: column;
+
 }
 
 #showcase h1{
     margin-top:100px;
     font-size:55px; 
     margin-bottom:10px; 
+   
 }
 
 #showcase p{
     font-size:20px;
+   
 }
 
 /*Newsletter*/
 
 #newsletter{
-    padding:15px; 
-    color: white; 
+    display: flex;
+    padding:15px;
+    color: white;
     background: #35424a;
+    
 }
 
 #newsletter h1{
-    float:left;
+    /* float:left; */
+    order: 1;
+    flex: 1; 
 }
 
 #newsletter form{
-    float:right; 
+    /* float:right;  */
     margin-top: 15px;
+    order: 2;
+    flex: 1; 
 }
 
 #newsletter input[type="email"]{
