--- a/Grid CSS Responsive Mobile Website/style.css
+++ b/Grid CSS Responsive Mobile Website/style.css
@@ -1,7 +1,7 @@
 /*Core Styles*/ 
 body{
     margin:0; 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #333;
     color: #fff; 
     font-size: 1.1em;
@@ -32,7 +32,7 @@ p{
     text-decoration: none;
     padding: 1em 2em; 
     border: 1px solid #666; 
-    margin: 0.5em 0; 
+    margin: .5em 0; 
 }
 
 .btn:hover{
