--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -73,7 +73,7 @@ p{
 ul {
     list-style-type: none;
   }
-  
+
 .navbar {
     background: white;
     /* opacity: 0.4; */
@@ -86,7 +86,7 @@ ul {
   }
   
   .logo img {
-      height: 40px;
+      height: 3em;
   
   
   }
@@ -94,7 +94,7 @@ ul {
   .navbar a {
       color: black;
       text-decoration: none;
-      font-size: 18px;
+      font-size: 0.8em;
       font-weight: bold;
     }
   
@@ -125,6 +125,36 @@ if the navbar was parent, the container class is the only children*/
     margin-left: 20px; /*makes it so that there is 20px margin on left of each item*/
 }
 
+/* .navbar ul :last-child{
+    margin-right: 0;
+} */
+
+
+
+.navbar input[type=text] {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 0.7em;
+    padding: 0.45em;
+    border: none;
+  
+  }
+  
+  .navbar .search-container button {
+    padding: 0.2em 0.3em;
+    /* margin-top: 8px;
+    margin-right: 16px; */
+    background: whitesmoke;
+    font-size: 1em;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .navbar .search-container button:hover {
+    background: #ccc;
+  }
+
+  
     
 /*Header Showcase*/
 
@@ -152,6 +182,21 @@ if the navbar was parent, the container class is the only children*/
     /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
 }
 
+
+/* video*/
+
+/* #showcase .bg-image{
+    position: absolute; 
+    /* background: rgb(0, 0, 0) url('https://www.designscene.net/wp-content/uploads/2020/04/ZARA-SS20-Steven-Meisel-00.jpg');
+    background-position: top;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    width: 100%; 
+    min-height: 450x;
+    z-index: -1000; 
+    opacity: 0.8;
+    /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text
+} */ 
 
 
 #showcase h1{
@@ -213,19 +258,78 @@ if the navbar was parent, the container class is the only children*/
 
 /*footer*/
 
+
 #main-footer{
     padding: 2em; 
     background: black; 
-    color: white;
+    color: whitesmoke;
     text-align: center; 
 }
 
+
+
 /*change url color and remove underline*/
+#main-footer{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    text-transform: uppercase;
+}
 
 #main-footer a{
     color: #2690d4; 
     text-decoration: none; 
+    
+
 }
+
+#main-footer input[type=text] {
+    font-family: 'Montserrat', sans-serif;
+  
+    font-size: 1em;
+    padding: 0.5em;
+   
+    background-color: black;
+    color: #eaeaea;
+    border-right: #eaeaea;
+    text-align: left;
+    width: 18em;
+  
+  }
+
+  .social ul
+{
+  /* position: absolute; */
+  z-index: 10;
+  /* bottom: 20px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social li
+{
+  list-style: none;
+}
+.social li a
+{
+  display: inline-block;
+  margin-left: 30px;
+  margin-right: 20px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+.social li a:hover
+{
+  transform: scale(0.5) translateY(-15px);
+}
+
+
+
+/*Carousel*/ 
+
+
+
+
 
 /*Media Query*/ 
 
@@ -264,5 +368,5 @@ if the navbar was parent, the container class is the only children*/
         width: 31%; 
     }
     
-
+    
 }
