--- a/Zara Website 2/css/style.css
+++ b/Zara Website 2/css/style.css
@@ -60,9 +60,9 @@ ul {
   }
 
 .navbar {
-    background: white;
+    background: black;
     /* opacity: 0.4; */
-    color: black;
+    color: white;
     height: 60px;
     padding: 10px 50px;
     font-family: 'Montserrat', sans-serif;
@@ -72,12 +72,10 @@ ul {
   
   .logo img {
       height: 3em;
-  
-  
   }
   
   .navbar a {
-      color: black;
+      color: white; 
       text-decoration: none;
       font-size: 0.8em;
       font-weight: bold;
@@ -119,24 +117,23 @@ if the navbar was parent, the container class is the only children*/
 .navbar input[type=text] {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
-    font-size: 0.7em;
+    font-size:0.7em;
     padding: 0.45em;
     border: none;
+    background-color: #333;
+    color: white;
+    text-align: left;
+    width: 10em;
   
   }
   
-  .navbar .search-container button {
-    padding: 0.2em 0.3em;
-    /* margin-top: 8px;
-    margin-right: 16px; */
-    background: whitesmoke;
-    font-size: 1em;
-    border: none;
-    cursor: pointer;
+  .navbar img{
+    height: 1.4em;
+ 
   }
   
   .navbar .search-container button:hover {
-    background: #ccc;
+    /* background: #ccc; */
   }
 
 /*Header Showcase*/
