--- a/Zara Website 2/css/style.css
+++ b/Zara Website 2/css/style.css
@@ -227,6 +227,7 @@ if the navbar was parent, the container class is the only children*/
 }
 
 #section-d .box img{
+   width: 300px; height: 337px; object-fit: fill;
 
 }
 
