--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -148,16 +148,16 @@ if the navbar was parent, the container class is the only children*/
 
 .menu
 {
+  position:fixed;
   background-color: white;
   top: 0;
   right: 0;
   width: 300px;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: bottom;
+  align-content: center;
   z-index: 1000;
-  position:fixed;
 }
 .menu ul
 {
@@ -226,9 +226,7 @@ if the navbar was parent, the container class is the only children*/
 
 #showcase h1{
     padding-top:100px;
-    padding-bottom: 0px; 
-   
-    
+    padding-bottom: 0px;  
 }
 
 
@@ -279,18 +277,23 @@ if the navbar was parent, the container class is the only children*/
 
 /*Section c / Boxes*/
 #section-d .box{
-  padding-right: 2.5em;
-  padding-top: 2.5em;
-  padding-bottom: 2.5em;
+  padding-right: 2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   padding-left: 0.4em;
   
   color: white; 
   background-color: whitesmoke;
 
+  position: relative;
+  text-align: center;
+  color: white;
+  z-index: -2;
+
 }
 
 #section-d .box:first-child{
-  padding-left: 2.5em;
+  padding-left: 2em;
   padding-right: 0.4em;
   /* background-color: rgb(139, 57, 57); */
  
@@ -301,25 +304,32 @@ if the navbar was parent, the container class is the only children*/
 
 
 }
-/* 
-.box #girl .bg-image{
-  position: absolute; 
-  background-image: url(images/girl.jpg);
-  /* background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover; */
-  /* z-index: -100; 
-  opacity: 0.4; */
-  /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* font-size: large; */
+  z-index: 1000;
 }
 
- */
+.box a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.1em;
+  font-weight: bold;
+}
 
+.box a:hover{
+  
+  color: goldenrod;
+
+}
 
 
 /*footer*/
-
-
 #main-footer{
     padding: 2em; 
     background: black; 
