--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -228,6 +228,20 @@ if the navbar was parent, the container class is the only children*/
 
 
 
+#showcase .bg-image1{
+  position: absolute; 
+  background: rgb(0, 0, 0) url('https://i.insider.com/5ba9319491ff6dbe478b4570?width=1200&format=jpeg');
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%; 
+  height: 300px;
+  z-index: -100; 
+  opacity: 0.4;
+  /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
+}
+
+
 
 /* video*/
 
@@ -249,6 +263,38 @@ if the navbar was parent, the container class is the only children*/
     padding-top:100px;
     padding-bottom: 0px;  
 }
+
+/*Banner*/
+#banner{
+  min-height: 300px;
+  text-align: center;
+}
+
+#banner .content-wrap{
+  padding: 0 1.5em;
+}
+
+
+#banner .image{
+position: absolute; 
+background: rgb(0, 0, 0) url('https://blog.procurify.com/app/uploads/2016/10/zara-blog-04-1024x576.jpg');
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+width: 100%; 
+height: 300px;
+z-index: -100; 
+opacity: 0.25;
+/*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
+}
+
+
+/*same as showcase*/
+#banner h1{
+  padding-top:100px;
+  padding-bottom: 0px;  
+}
+
 
 
 /*Section A*/ 
@@ -290,7 +336,7 @@ if the navbar was parent, the container class is the only children*/
 }
 
 .card-title{
-  font-weight: bold;
+  font-weight: none;
 }
 
 /*section C*/ 
@@ -309,7 +355,7 @@ if the navbar was parent, the container class is the only children*/
   font-family: 'Montserrat', sans-serif;
 }
 
-/*Section c / Boxes*/
+/*Section d / Boxes*/
 #section-d .box{
   padding-right: 1em;
   padding-top: 1em;
@@ -333,11 +379,42 @@ if the navbar was parent, the container class is the only children*/
  
  }
 
+ /*section e = contact us page*/
+
+ /*Section d / Boxes*/
+#section-d .box{
+  padding-right: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 0.4em;
+  
+  color: black; 
+  background-color: whitesmoke;
+
+  position: relative;
+  text-align: center;
+  z-index: -2;
+
+}
+
+#section-d .box:first-child{
+  padding-left: 1em;
+  padding-right: 0.4em;
+  /* background-color: rgb(139, 57, 57); */
+ 
+ }
+
 /* #section-d .box img{
    width: 50EMx; height: 58EM; object-fit: fill; 
 
 
 } */
+
+#section-z{
+  display: flex; 
+  justify-content: space-between;
+  
+}
 
 .centered {
   position: absolute;
@@ -375,6 +452,10 @@ if the navbar was parent, the container class is the only children*/
     color: whitesmoke;
     text-align: center; 
 
+}
+
+p.social{
+  padding: 0px;
 }
 
 
