--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -142,6 +142,10 @@ if the navbar was parent, the container class is the only children*/
     margin-right: 10px
 }
 
+.responsive {
+  width: 100%;
+  height: auto;
+}
 /*Sidebar*/
 
 .toggle
@@ -378,11 +382,6 @@ opacity: 0.25;
 
 /*Section d / Boxes*/
 #section-d .box{
-  padding-right: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.4em;
-  
   color: white; 
   background-color: whitesmoke;
 
@@ -390,46 +389,8 @@ opacity: 0.25;
   text-align: center;
   color: white;
   z-index: -2;
-
 }
 
-#section-d .box:first-child{
-  padding-left: 1em;
-  padding-right: 0.4em;
-  /* background-color: rgb(139, 57, 57); */
- 
- }
-
- /*section e = contact us page*/
-
- /*Section d / Boxes*/
-#section-d .box{
-  padding-right: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.4em;
-  
-  color: black; 
-  background-color: whitesmoke;
-
-  position: relative;
-  text-align: center;
-  z-index: -2;
-
-}
-
-#section-d .box:first-child{
-  padding-left: 1em;
-  padding-right: 0.4em;
-  /* background-color: rgb(139, 57, 57); */
- 
- }
-
-/* #section-d .box img{
-   width: 50EMx; height: 58EM; object-fit: fill; 
-
-
-} */
 
 #section-z{
   display: flex; 
@@ -479,10 +440,17 @@ p.social{
   padding: 0px;
 }
 
-#form-container{
+
+
+/* Add a background color and some padding around the form */
+#form-container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  color: black;
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 
@@ -490,19 +458,22 @@ p.social{
 #form-container input[type=text], select, textarea {
   font-family: 'Montserrat', sans-serif;
   width: 100%; /* Full width */
-  padding: 12px; /* Some padding */ 
+  padding: 12px; /* Some padding */
   border: 1px solid #ccc; /* Gray border */
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
+  /* margin-bottom: 16px; */ /* Bottom margin */
   resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-  
 }
+#name{
+  padding: 0px;
+}
+
 
 /* Style the submit button with a specific background color etc */
 #form-container input[type=submit] {
-  background-color: #04AA6D /*darker*/;
+  background-color: #9A7D0A  /*darker*/;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -512,16 +483,9 @@ p.social{
 
 /* When moving the mouse over the submit button, add a darker green color */
 #form-container input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #7D6608;
 }
 
-/* Add a background color and some padding around the form */
-#form-container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  color: black;
-}
 
 
 
@@ -607,6 +571,7 @@ p.copyright{
       grid-template-columns: 1fr repeat(2, minmax(auto, 25em )) 1fr; 
   }
 
+  
   #section-a .content-text {
       columns: 2; 
       column-gap: 2em;
@@ -646,6 +611,22 @@ p.copyright{
   #section-j ul, .content-wide{
     grid-column: 1/5; 
 }
+
+
+
+#section-d .box:first-child{
+  padding-left: 1em;
+  padding-right: 0.4em;
+  /* background-color: rgb(139, 57, 57); */
+ 
+ }
+
+ #section-d .box{
+  padding-right: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 0.4em;
+ }
 /* 
 .content-wide{
 
