--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -96,21 +96,38 @@ ul {
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     z-index: 1000 ;
+    display: block;
     
    
   }
+
   
-  .logo img {
+  
+  .logo img{
       height: 4.5em;
       padding: 0.4em;
-  
-  
+
   }
   
+  .openBtn img{
+    height: 0.85em;
+    border: none;
+    
+  }
+
+  .icon img{
+    height: 5em;
+  }
+
+
+  .nav .icon {
+    display: none;
+  }
+
   .navbar a {
       color: white;
       text-decoration: none;
-      font-size: 0.8em;
+      font-size: 0.85em;
       /* font-weight: bold; */
     }
   
@@ -126,7 +143,6 @@ if the navbar was parent, the container class is the only children*/
     justify-content: space-between; /*space between the "flexbox logo and then nav bar links*/
     align-items: center;
     height: 100%;
-
 }
 
 /*add flexblox IN the navbar ul so that we can make the items go horizontal INSTEAD of vertical*/
@@ -148,7 +164,7 @@ if the navbar was parent, the container class is the only children*/
 }
 /*Sidebar*/
 
-.toggle
+/* .toggle
 { 
   position: relative;
   width: 60px;
@@ -167,11 +183,80 @@ if the navbar was parent, the container class is the only children*/
   background-size: 25px;
   background-position: center;
   cursor: pointer;
+} */
+.openBtn {
+ border: none;
+  cursor: pointer;
+}
+
+.openBtn:hover {
+  opacity: 0.4;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+}
+
+.overlay-content {
+  position: relative;
+  top: 46%;
+  width: 80%;
+  text-align: center;
+  margin-top: 30px;
+  margin: auto;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  cursor: pointer;
+  color: white;
+}
+
+.overlay .closebtn:hover {
+  color: #ccc;
+}
+
+.overlay input[type=text] {
+  padding: 15px;
+  font-size: 17px;
+  border: none;
+  float: left;
+  width: 80%;
+  background: white;
+}
+
+.overlay input[type=text]:hover {
+  background: #f1f1f1;
+}
+
+.overlay button {
+  float: left;
+  width: 20%;
+  padding: 15px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.overlay button:hover {
+  background: #bbb;
 }
 
 
 
-.menu
+/* .menu
 {
   position:fixed;
   background-color: white;
@@ -201,7 +286,7 @@ if the navbar was parent, the container class is the only children*/
 .menu ul li a:hover
 {
   color: goldenrod; 
-}
+} */
 
     
 /*Header Showcase*/
@@ -629,9 +714,22 @@ p.copyright{
   padding-bottom: 1em;
   padding-left: 0.4em;
  }
-/* 
-.content-wide{
 
-} */
+}
 
+@media screen and (max-width: 700px) {
+  .nav a:not(:last-child) {display: none;}
+
+  .nav.responsive {position: relative;}
+  .nav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .nav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
