--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -81,6 +81,47 @@ p{
     color: #333; 
 }
 
+/*topnav*/
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+ 
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:nth-child(1) {
+  float: left;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+
+
+
+
+
+
 /*Navigation Bar*/ 
 
 ul {
@@ -715,9 +756,33 @@ p.copyright{
   padding-left: 0.4em;
  }
 
+
 }
 
-@media screen and (max-width: 700px) {
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* @media screen and (max-width: 700px) {
   .nav a:not(:last-child) {display: none;}
 
   .nav.responsive {position: relative;}
@@ -732,4 +797,4 @@ p.copyright{
     display: block;
     text-align: left;
   }
-}
+} */
