--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -83,39 +83,68 @@ p{
 
 /*topnav*/
 .topnav {
+  padding-left: 30px;
+  padding-right: 30px;
+  
+  background: black;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
   overflow: hidden;
-  background-color: #333;
+  height: 70px;;
+
  
 }
 
 .topnav a {
+ 
   float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
+  padding-top: 20px;
   text-decoration: none;
   font-size: 17px;
 }
 
 .topnav a:nth-child(1) {
   float: left;
+  padding:0px;
+  margin: 0;
+}
+
+.topnav a:nth-child(2), 
+.topnav a:nth-child(7)
+{
+  display: none;
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: goldenrod;
 }
 
-.topnav a.active {
+/* .topnav a.active {
   background-color: #04AA6D;
   color: white;
-}
+} */
 
 .topnav .icon {
   display: none;
 }
 
+.openBtn {
+  border: none;
+   cursor: pointer;
+   font-family: 'Montserrat', sans-serif;
+   text-transform: uppercase;
+   background-color: black;
+   color: white;
+   font-size: 17px;
+ }
+ 
+ .openBtn:hover {
+   opacity: 0.4;
+ }
 
 
 
@@ -145,7 +174,7 @@ ul {
   
   
   .logo img{
-      height: 4.5em;
+      height: 4em;
       padding: 0.4em;
 
   }
@@ -225,14 +254,14 @@ if the navbar was parent, the container class is the only children*/
   background-position: center;
   cursor: pointer;
 } */
-.openBtn {
+/* .openBtn {
  border: none;
   cursor: pointer;
 }
 
 .openBtn:hover {
   opacity: 0.4;
-}
+} */
 
 .overlay {
   height: 100%;
@@ -779,6 +808,29 @@ p.copyright{
     float: none;
     display: block;
     text-align: left;
+  }
+
+  .topnav.responsive a:first-child {
+  
+    display: none;
+  }
+
+
+  .topnav.responsive a:nth-child(3) {
+    display: none;
+  }
+
+
+  .topnav.responsive a:nth-child(2){
+    display: block;
+    text-align: left;
+
+  }
+
+  .topnav.responsive a:nth-child(8){
+    display: block;
+    text-align: left;
+
   }
 }
 
