--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -605,88 +605,12 @@ p.social{
 
 /*Media Query*/ 
 
-/*styles put in here are only going to be in affect IF the width is greater than 700px*/
-
-@media(min-width: 700px){
-  .grid {
-      display: grid;
-      grid-template-columns: 1fr repeat(2, minmax(auto, 25em )) 1fr;
-  }
-
-  #contact-boxes ul{
-    grid-column:  1/5; 
- }
-
-  #section-a .content-text {
-      columns: 2; 
-      column-gap: 2em;
-  }
-
-  #section-a .content-text p {
-     padding-top:0;
-  }
-  
-
-  .content-wrap, 
-  #section-b ul{
-      grid-column: 2/4; 
-  }
-
- 
-  .box, #main-footer div{
-      grid-column: span 2; 
-  }
-
-  p.copyright{
-    padding: 0px;
-  }
-  
-
-  #section-b ul, #section-j ul, #contact-boxes ul{
-      display: flex;
-      justify-content: space-around; 
-  }
-
-  #section-j li, #section-b li, #contact-boxes li{
-      width: 31%; 
-  }
-
-  #section-j ul, .content-wide{
-    grid-column: 1/5; 
-}
-
-#form-container form{
-  grid-column: 2/4;
-  
-}
-
-
-#section-d .box:first-child{
-  padding-left: 1em;
-  padding-right: 0.4em;
- 
- }
-
- #section-d .box{
-  padding-right: 1em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.4em;
- }
-
-
-}
-
-
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
   }
-}
-
-@media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -723,19 +647,80 @@ p.social{
   }
 }
 
-/* @media screen and (max-width: 700px) {
-  .nav a:not(:last-child) {display: none;}
 
-  .nav.responsive {position: relative;}
-  .nav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+
+
+/*styles put in here are only going to be in affect IF the width is greater than 700px*/
+
+@media(min-width: 700px){
+  .grid {
+      display: grid;
+      grid-template-columns: 1fr repeat(2, minmax(auto, 25em )) 1fr;
   }
 
-  .nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+  #contact-boxes ul{
+    grid-column:  1/5; 
+ }
+
+ /*2 Column Showcase -Section-d (index)*/
+ #section-d .box:first-child{
+  padding-left: 1em;
+  padding-right: 0.4em;
+ 
+ }
+
+ #section-d .box{
+  padding-right: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 0.4em;
+ }
+
+  /* #section-a .content-text {
+      columns: 2; 
+      column-gap: 2em;
   }
-} */
+
+  #section-a .content-text p {
+     padding-top:0;
+  }
+   */
+
+  .content-wrap, 
+  #section-b ul{
+      grid-column: 1/5; 
+  }
+
+ 
+  .box, #main-footer div{
+      grid-column: span 2; 
+  }
+
+  p.copyright{
+    padding: 0px;
+  }
+  
+
+  #section-b ul, #section-j ul, #contact-boxes ul{
+      display: flex;
+      justify-content: space-around; 
+  }
+
+  #section-j li, #section-b li, #contact-boxes li{
+      width: 31%; 
+  }
+
+  #section-j ul, .content-wide{
+    grid-column: 1/5; 
+}
+
+#form-container form{
+  grid-column: 2/4;
+  
+}
+
+
+
+
+}
+
