--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -59,7 +59,7 @@ p{
 
 /*topnav*/
 .topnav {
-  /* padding-left: 3em; */
+  padding-left: 3em;
   padding-right: 3em;
   background: black;
   font-family: 'Montserrat', sans-serif;
