--- a/Zara Website 1/css/style1.css
+++ b/Zara Website 1/css/style1.css
@@ -208,23 +208,6 @@ header .logo
   transform: scale(0.5) translateY(-15px);
 }
 
-.boxes .container{
-  display: flex; /*makes everything in the container go in a row*/
-  justify-content: space-between;
-  /* align-items: center; */
-
-}
-
-.box{
-  flex: 1;
-  background: #0a51cc;
-  color: #fff;
-  border-radius: 10px;
-  margin: 20px 10px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
-  padding: 15px 20px; /*15 top and bottom, 20 left and right*/
-}
-
 
 
 .menu
@@ -271,6 +254,10 @@ header .logo
   .text h3
   {
     font-size: 2em;
+  }
+
+  .text{
+    align-items: center;
   }
 
   
